--- a/src/shared/astro/Video.astro
+++ b/src/shared/astro/Video.astro
@@ -45,7 +45,8 @@ if (url.hostname.endsWith("vimeo.com")) {
         position: absolute;
         overflow: hidden;
 
-        inset: 0;
+        left: 0;
+        top: 0;
         width: 100%;
         height: 100%;
         container: video-wrapper / size;
@@ -54,15 +55,17 @@ if (url.hostname.endsWith("vimeo.com")) {
             position: absolute;
             height: max(56.25cqw, 100cqh);
             width: max(177.778cqh, 100cqw);
-            /* left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%); */
+
+            left: calc((max(177.778cqh, 100cqw) - 100cqw) * -.5);
+            top: calc((max(56.25cqw, 100cqh) - 100cqh) * -.5);
         }
     }
 
-    iframe {
-        width: 100%;
-        height: auto;
-        aspect-ratio: 16/9;
+    .video-wrapper:not(.background) {
+        iframe {
+            width: 100%;
+            height: auto;
+            aspect-ratio: 16/9;
+        }
     }
 </style>
