--- a/src/components/accordion/accordion.astro
+++ b/src/components/accordion/accordion.astro
@@ -127,4 +127,19 @@ const {title} = Astro.props;
             transform: rotate(-180deg);
         }
     }
+
+    /* Editor Styles */
+    .cms-editor-active accordion {
+        display: block;
+        padding-bottom: 2rem;
+
+        &::before {
+            content: "▼ " attr(title);
+            display: block;
+            font-size: var(--text-size-medium);
+            color: rgb(var(--text-color));
+            border-bottom: 1px solid rgb(var(--accordion-rule-color, var(--text-color)));
+            margin-bottom: 1rem;
+        }
+    }
 </style>
