--- a/src/components/facebook/facebook.astro
+++ b/src/components/facebook/facebook.astro
@@ -120,28 +120,31 @@ const embedURL =
 </style>
 
 <style is:global lang="scss">
+    /* Editor Fallback */
     facebook {
         position: relative;
         display: inline-block;
         width: 100%;
         height: 570px;
 
-        &::after {
-            content: "Facebook Embed";
+        &::before {
+            content: "👍 Facebook Embed";
+            font-size: var(--text-size-medium);
+            color: black;
+
             position: absolute;
             margin-left: calc(50% - 190px);
             top: 0;
             left: 0;
             width: 380px;
             height: 570px;
-            color: rgb(var(--background-color));
-            background-color: rgb(var(--text-color));
-            border-radius: var(--border-radius);
+            border: 1px solid grey;
+            background-color: white;
+            border-radius: .5rem;
 
-            vertical-align: middle;
             text-align: center;
             line-height: 570px;
-            font-size: 15px;
         }
     }
+
 </style>
