fix(asideImage): contain image in editor

--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -66,6 +66,7 @@ const { width = 256, height = 256, class: classes, title } = Astro.props;
     .cms-editor-active .richtext > .component-wrapper img {
         max-height: 40rem;
         margin: 3rem 0;
+        object-fit: contain;
 
         &:not(.align-left, .align-right) {
             width: 100%;
