--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -21,6 +21,7 @@ const { width = 256, height = 256, class: classes, title } = Astro.props;
 <style>
     figcaption {
         font-size: var(--text-size-medium);
+        color: rgb(var(--text-color));
         margin-top: 0.5em;
     }
 
