--- a/src/shared/astro/Video.astro
+++ b/src/shared/astro/Video.astro
@@ -18,13 +18,8 @@ if (url.hostname.endsWith("vimeo.com")) {
     url.pathname = url.pathname.replace(/^(\/.*\/)(\d*)$/, "/video/$2");
 
     if (background) {
-        // url.searchParams.append("title", "0");
-        // url.searchParams.append("byline", "0");
-        // url.searchParams.append("portrait", "0");
         url.searchParams.append("background", "1");
-        // url.searchParams.append("autoplay", "1");
-        // url.searchParams.append("muted", "1");
-        // url.searchParams.append("loop", "1");
+        url.searchParams.append("pip", "0");
     } else {
         url.searchParams.append("title", title ? "1" : "0");
         url.searchParams.append("byline", byline ? "1" : "0");
