feat(lightbox): add swipe support, better display on mobile devices

--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -204,6 +204,12 @@ const id = `card-index-${key}`;
         grid-area: items;
     }
 
+    @media only screen and (max-width: 768px) {
+        .card-items {
+            grid-template-columns: 1fr;
+        }
+    }
+
     .card-tools {
         grid-area: tools;
         display: flex;
