--- a/src/components/card-index/card.astro
+++ b/src/components/card-index/card.astro
@@ -111,7 +111,8 @@ function formatDate(date: Date) {
         display: grid;
         overflow: hidden;
         border-radius: var(--border-radius);
-        grid-template-rows: min-content auto auto;
+        grid-template-rows: min-content auto;
+        grid-auto-rows: auto;
 
         position: relative;
         flex: 0 1 512px;
